fix project page margin bottom on mobile

--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1203,7 +1203,7 @@ footer {
     flex-direction: column;
     align-items: center;
     margin-top: 8vh;
-    margin-bottom: 517vh;
+    margin-bottom: 475vh;
   }
 
   .projects-container {
